# AUTh-mp3

./: .gitignore  README.md  helpers.py  mp3.py  pyproject.toml  requirements.txt  sim.py
src/: frame.py  psycho.py  quantum.py  sim.py  total.py
