[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mp3"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "PyQt6",
    "tqdm"
]

[project.scripts]
"mp3psycho" = "psycho:main"
"mp3convert" = "sim:main"
"mp3quantum" = "quantum:main"
